--- a/SportsAnalyzer/Content/Site.css
+++ b/SportsAnalyzer/Content/Site.css
@@ -23,9 +23,16 @@ textarea {
   max-width: 280px;
 }*/
 
-.bg-col {
+.col-form {
   background-color: #e9ecef;
+  border: 0.5px solid darkslategrey;
   border-radius: 1rem;
-  margin: 1rem 0.5rem;
-  padding: 1rem;
+  margin: 0.5rem;
+  padding: 0.75rem;
+}
+
+.hr-col {
+  margin: 0rem 0rem 0.5rem;
+  padding: 0rem;
+  border-top: 1px solid darkslategrey;
 }
