--- a/SportsAnalyzer/Content/Site.css
+++ b/SportsAnalyzer/Content/Site.css
@@ -29,3 +29,9 @@
   padding: 0rem;
   border-top: 1px solid darkslategrey;
 }
+
+#myChartDiv {
+  margin: 0 auto;
+  height: 350px;
+  max-width: 600px;
+}
