--- a/SportsAnalyzer/Views/Football/Table.cshtml
+++ b/SportsAnalyzer/Views/Football/Table.cshtml
@@ -1,11 +1,11 @@
 ﻿@model IEnumerable<SportsAnalyzer.Models.TeamLeagueStanding>
 
 @{
-    ViewBag.Title = "Table";
+    ViewBag.Title = "SPL League Table";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Table</h2>
+<h2>@ViewBag.Title</h2>
 
 <p>
     @Html.ActionLink("Create New", "Create")
