--- a/SportsAnalyzer/Views/Football/Table.cshtml
+++ b/SportsAnalyzer/Views/Football/Table.cshtml
@@ -7,77 +7,83 @@
 
 <h2>@ViewBag.Title</h2>
 
-<p>
-  @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-  <tr>
-    <th>
-      @Html.DisplayNameFor(model => model.Team_Id)
-    </th>
-    <th>
-      @Html.DisplayNameFor(model => model.Team)
-    </th>
-    <th>
-      @Html.DisplayNameFor(model => model.Played)
-    </th>
-    <th>
-      @Html.DisplayNameFor(model => model.Points)
-    </th>
-    <th>
-      @Html.DisplayNameFor(model => model.Won)
-    </th>
-    <th>
-      @Html.DisplayNameFor(model => model.Draw)
-    </th>
-    <th>
-      @Html.DisplayNameFor(model => model.Lost)
-    </th>
-    <th>
-      @Html.DisplayNameFor(model => model.Goals_For)
-    </th>
-    <th>
-      @Html.DisplayNameFor(model => model.Goals_Against)
-    </th>
-    <th>
-      @Html.DisplayNameFor(model => model.Goal_Difference)
-    </th>
-  </tr>
-
-  @foreach (var item in Model)
-  {
+@if (Model.Count() == 0)
+{
+  <div class="alert alert-warning" role="alert">
+    @ViewBag.Message
+  </div>
+}
+else
+{
+  <table class="table">
     <tr>
-      <td>
-        @Html.DisplayFor(modelItem => item.Team_Id)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Team)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Played)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Points)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Won)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Draw)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Lost)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Goals_For)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Goals_Against)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Goal_Difference)
-      </td>
+      <th>
+        @Html.DisplayNameFor(model => model.Team_Id)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.Team)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.Played)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.Points)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.Won)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.Draw)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.Lost)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.Goals_For)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.Goals_Against)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.Goal_Difference)
+      </th>
     </tr>
-  }
 
-</table>
+    @foreach (var item in Model)
+    {
+      <tr>
+        <td>
+          @Html.DisplayFor(modelItem => item.Team_Id)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Team)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Played)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Points)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Won)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Draw)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Lost)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Goals_For)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Goals_Against)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Goal_Difference)
+        </td>
+      </tr>
+    }
+
+  </table>
+}
