--- a/SportsAnalyzer/Views/Football/Teams.cshtml
+++ b/SportsAnalyzer/Views/Football/Teams.cshtml
@@ -1,71 +1,65 @@
 ﻿@model IEnumerable<SportsAnalyzer.Models.FootballTeam>
 
 @{
-  ViewBag.Title = "SPL list of teams";
+  ViewBag.Title = "SPL List of teams";
   Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2> @ViewBag.Title</h2>
+<h2>@ViewBag.Title</h2>
 
-<p>
-  @Html.ActionLink("Create New", "Create")
-</p>
-
-@if (Model.Count() > 0)
+@if (Model.Count() == 0)
 {
-  ViewBag.Message = "";
+  <div class="alert alert-warning" role="alert">
+    @ViewBag.Message
+  </div>
 }
 else
 {
-  ViewBag.Message = ViewBag.EmptyList;
-  <p>ViewBag.Message </p>
-}
-
-<table class="table">
-  <tr>
-    <th>
-      @Html.DisplayNameFor(model => model.Team_Id)
-    </th>
-    <th>
-      @Html.DisplayNameFor(model => model.Name)
-    </th>
-    <th>
-      @Html.DisplayNameFor(model => model.Country)
-    </th>
-    <th>
-      @Html.DisplayNameFor(model => model.Stadium)
-    </th>
-    <th>
-      @Html.DisplayNameFor(model => model.HomePageURL)
-    </th>
-    <th>
-      @Html.DisplayNameFor(model => model.WIKILink)
-    </th>
-  </tr>
-
-  @foreach (var item in Model)
-  {
+  <table class="table">
     <tr>
-      <td>
-        @Html.DisplayFor(modelItem => item.Team_Id)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Name)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Country)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.Stadium)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.HomePageURL)
-      </td>
-      <td>
-        @Html.DisplayFor(modelItem => item.WIKILink)
-      </td>
+      <th>
+        @Html.DisplayNameFor(model => model.Team_Id)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.Name)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.Country)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.Stadium)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.HomePageURL)
+      </th>
+      <th>
+        @Html.DisplayNameFor(model => model.WIKILink)
+      </th>
     </tr>
-  }
 
-</table>
+    @foreach (var item in Model)
+    {
+      <tr>
+        <td>
+          @Html.DisplayFor(modelItem => item.Team_Id)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Name)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Country)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.Stadium)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.HomePageURL)
+        </td>
+        <td>
+          @Html.DisplayFor(modelItem => item.WIKILink)
+        </td>
+      </tr>
+    }
 
+  </table>
+}
