Add seasonYear table cell to the Stats view

--- a/SportsAnalyzer/Views/Football/Stats.cshtml
+++ b/SportsAnalyzer/Views/Football/Stats.cshtml
@@ -17,6 +17,9 @@
             @Html.DisplayNameFor(model => model.LeagueName)
           </th>
           <th>
+            @Html.DisplayNameFor(model => model.SeasonYear)
+          </th>
+          <th>
             @Html.DisplayNameFor(model => model.TeamName)
           </th>
           <th>
@@ -37,6 +40,9 @@
         <tr>
           <td>
             @Html.DisplayFor(model => model.LeagueName)
+          </td>
+          <td>
+            @Html.DisplayFor(model => model.SeasonYear)
           </td>
           <td>
             @Html.DisplayFor(model => model.TeamName)
