--- a/SportsAnalyzer/Views/Football/Stats.cshtml
+++ b/SportsAnalyzer/Views/Football/Stats.cshtml
@@ -85,15 +85,15 @@
       <div class="row mx-1">
         <div class="form-check col-12">
           <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="1">
-          <label class="form-check-label" for="inlineCheckbox1">Team 1</label>
+          <label class="form-check-label" for="inlineCheckbox1">Hearts</label>
         </div>
         <div class="form-check col-12">
           <input class="form-check-input" type="checkbox" id="inlineCheckbox2" value="2">
-          <label class="form-check-label" for="inlineCheckbox2">Team 2</label>
+          <label class="form-check-label" for="inlineCheckbox2">Rangers</label>
         </div>
         <div class="form-check col-12">
           <input class="form-check-input" type="checkbox" id="inlineCheckbox3" value="3">
-          <label class="form-check-label" for="inlineCheckbox3">Team 3</label>
+          <label class="form-check-label" for="inlineCheckbox3">Celtic</label>
         </div>
       </div>
     </fieldset>
