Add LeagueName and SeasonYear variables to JS
Variables are necessary for the chart view and WebApi requests for
appropriate stats data.

--- a/SportsAnalyzer/Views/Football/Stats.cshtml
+++ b/SportsAnalyzer/Views/Football/Stats.cshtml
@@ -135,7 +135,9 @@
 {
   <script id="mainScript" src="~/Scripts/main.js"
           data-time-intervals-all-text='@serializer.Serialize(TimeIntervalsTexts)'
-          data-goals-in-intervals-percent='@serializer.Serialize(GoalsInIntervalsPercent)'>
+          data-goals-in-intervals-percent='@serializer.Serialize(GoalsInIntervalsPercent)'
+          data-league-name='@serializer.Serialize(Model.LeagueName)'
+          data-season-year='@serializer.Serialize(Model.SeasonYear)'>
   </script>
 }
 
