Parameterize JS functions for data and charts
This change is intended to prepare the script for creating various
charts and requesting various statistical data.

--- a/SportsAnalyzer/Views/Football/Stats.cshtml
+++ b/SportsAnalyzer/Views/Football/Stats.cshtml
@@ -68,8 +68,8 @@
 
 <h2 class="text-center mx-1 mb-3">Goals statistics</h2>
 
-<div id="myChartDiv" class="mb-3">
-  <canvas id="myChart"></canvas>
+<div id="goalsInIntervalsChartDiv" class="mb-3">
+  <canvas id="goalsInIntervalsChartArea"></canvas>
 </div>
 
 <div class="row mx-1 mx-sm-0 mb-4 justify-content-center">
