--- a/SportsAnalyzer/Content/Site.css
+++ b/SportsAnalyzer/Content/Site.css
@@ -30,7 +30,7 @@
   border-top: 1px solid darkslategrey;
 }
 
-#myChartDiv {
+#goalsInIntervalsChartDiv {
   margin: 0 auto;
   height: 350px;
   max-width: 600px;
