--- a/SportsAnalyzer/Content/Site.css
+++ b/SportsAnalyzer/Content/Site.css
@@ -30,8 +30,9 @@
   border-top: 1px solid darkslategrey;
 }
 
-#goalsInIntervalsChartDiv {
-  margin: 0 auto;
+#goalsInIntervalsChartDiv, #matchGoalsChartDiv {
+  margin: 2rem auto;
   height: 350px;
   max-width: 600px;
 }
+
