--- a/SportsAnalyzer/Views/Football/Stats.cshtml
+++ b/SportsAnalyzer/Views/Football/Stats.cshtml
@@ -72,6 +72,10 @@
   <canvas id="goalsInIntervalsChartArea"></canvas>
 </div>
 
+<div id="matchGoalsChartDiv" class="mb-3">
+  <canvas id="matchGoalsChartArea"></canvas>
+</div>
+
 <div class="row mx-1 mx-sm-0 mb-4 justify-content-center">
 
   <div class="col-8 col-sm-6 col-md-4 col-lg-3 col-form">
