Change titles parts to start with capital letter

--- a/SportsAnalyzer/Views/Football/Stats.cshtml
+++ b/SportsAnalyzer/Views/Football/Stats.cshtml
@@ -66,7 +66,7 @@
   </div>
 </div>
 
-<h2 class="text-center mx-1 mb-3">Goals statistics</h2>
+<h2 class="text-center mx-1 mb-3">Goals Statistics</h2>
 
 <div id="goalsInIntervalsChartDiv" class="mb-3">
   <canvas id="goalsInIntervalsChartArea"></canvas>
@@ -111,7 +111,7 @@
   </div>
 </div>
 
-<h2 class="text-center mx-1 mb-3">Standings statistics</h2>
+<h2 class="text-center mx-1 mb-3">Standings Statistics</h2>
 
 <div id="roundPointsChartDiv" class="mb-3">
   <canvas id="roundPointsChartArea"></canvas>
