--- a/SportsAnalyzer/Content/Site.css
+++ b/SportsAnalyzer/Content/Site.css
@@ -25,8 +25,8 @@
 }
 
 .hr-col {
-  margin: 0rem 0rem 0.5rem;
-  padding: 0rem;
+  margin: 0 0 0.5rem;
+  padding: 0;
   border-top: 1px solid darkslategrey;
 }
 
