--- a/SportsAnalyzer/Views/Football/Stats.cshtml
+++ b/SportsAnalyzer/Views/Football/Stats.cshtml
@@ -7,7 +7,7 @@
 
 <h1 class="text-center mx-1 my-4">Statistics</h1>
 
-<h2 class="text-center mb-3">Basic Statistics</h2>
+<h2 class="text-center mb-3">Basic Statistics - All Season</h2>
 <div class="row mx-1 mb-5 justify-content-center">
   <div class="table-responsive-lg w-100">
     <table class="table table-bordered">
@@ -66,16 +66,6 @@
   </div>
 </div>
 
-<h2 class="text-center mx-1 mb-3">Goals Statistics</h2>
-
-<div id="goalsInIntervalsChartDiv" class="mb-3">
-  <canvas id="goalsInIntervalsChartArea"></canvas>
-</div>
-
-<div id="matchGoalsChartDiv" class="mb-3">
-  <canvas id="matchGoalsChartArea"></canvas>
-</div>
-
 <div class="row mx-1 mx-sm-0 mb-4 justify-content-center">
 
   <div class="col-8 col-sm-6 col-md-4 col-lg-3 col-form">
@@ -109,6 +99,16 @@
     </div>
     <input type="button" value="Chose rounds" class="btn btn-primary btn-block" id="changeRounds" />
   </div>
+</div>
+
+<h2 class="text-center mx-1 mb-3">Goals Statistics</h2>
+
+<div id="goalsInIntervalsChartDiv" class="mb-3">
+  <canvas id="goalsInIntervalsChartArea"></canvas>
+</div>
+
+<div id="matchGoalsChartDiv" class="mb-3">
+  <canvas id="matchGoalsChartArea"></canvas>
 </div>
 
 <h2 class="text-center mx-1 mb-3">Standings Statistics</h2>
