Fix properties names of TeamLeagueStanding model

--- a/SportsAnalyzer/Views/Football/Table.cshtml
+++ b/SportsAnalyzer/Views/Football/Table.cshtml
@@ -39,13 +39,13 @@ else
         @Html.DisplayNameFor(model => model.Lost)
       </th>
       <th>
-        @Html.DisplayNameFor(model => model.Goals_For)
+        @Html.DisplayNameFor(model => model.GoalsFor)
       </th>
       <th>
-        @Html.DisplayNameFor(model => model.Goals_Against)
+        @Html.DisplayNameFor(model => model.GoalsAgainst)
       </th>
       <th>
-        @Html.DisplayNameFor(model => model.Goal_Difference)
+        @Html.DisplayNameFor(model => model.GoalsDifference)
       </th>
     </tr>
 
@@ -74,13 +74,13 @@ else
           @Html.DisplayFor(modelItem => item.Lost)
         </td>
         <td>
-          @Html.DisplayFor(modelItem => item.Goals_For)
+          @Html.DisplayFor(modelItem => item.GoalsFor)
         </td>
         <td>
-          @Html.DisplayFor(modelItem => item.Goals_Against)
+          @Html.DisplayFor(modelItem => item.GoalsAgainst)
         </td>
         <td>
-          @Html.DisplayFor(modelItem => item.Goal_Difference)
+          @Html.DisplayFor(modelItem => item.GoalsDifference)
         </td>
       </tr>
     }
