--- a/SportsAnalyzer/Views/Football/Stats.cshtml
+++ b/SportsAnalyzer/Views/Football/Stats.cshtml
@@ -135,7 +135,8 @@
           data-time-intervals-all-text='@serializer.Serialize(TimeIntervalsTexts)'
           data-goals-in-intervals-percent='@serializer.Serialize(GoalsInIntervalsPercent)'
           data-league-name='@serializer.Serialize(Model.LeagueName)'
-          data-season-year='@serializer.Serialize(Model.SeasonYear)'>
+          data-season-year='@serializer.Serialize(Model.SeasonYear)'
+          data-match-goals='@serializer.Serialize(Model.MatchGoalsPct)'>
   </script>
 }
 
